--- a/package.json
+++ b/package.json
@@ -4,21 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "concurrently 'webpack --watch --progress' 'cd dist && nodemon backend/bundle.js backend/bundle.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^14.14.5",
+    "concurrently": "^5.3.0",
+    "copy-webpack-plugin": "^6.2.1",
+    "html-loader": "^1.3.2",
+    "nodemon": "^2.0.6",
     "ts-loader": "^8.0.7",
     "typescript": "^4.0.5",
     "webpack": "^5.2.0",
     "webpack-cli": "^4.1.0"
   },
   "dependencies": {
+    "@types/express": "^4.17.8",
     "class-validator": "^0.12.2",
     "express": "^4.17.1",
-    "graphql": "^15.4.0",
+    "express-graphql": "^0.11.0",
+    "graphql": "^15.3.0",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.0",
