--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "emitDecoratorMetadata": true,
     "paths": {
       "~*": ["./src/*"]
-    }
+    },
+    "allowSyntheticDefaultImports": true
   }
 }
