--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently 'webpack --watch --progress' 'cd dist && nodemon backend/bundle.js backend/bundle.js'",
+    "start": "concurrently 'webpack --watch --progress' 'mkdir -p dist/backend && touch dist/backend/bundle.js && cd dist && nodemon backend/bundle.js backend/bundle.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -23,11 +23,13 @@
   "dependencies": {
     "@types/express": "^4.17.8",
     "class-validator": "^0.12.2",
+    "dotenv-webpack": "^4.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "graphql": "^15.3.0",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.0",
     "type-graphql": "^1.1.0",
     "typeorm": "^0.2.28"
   }
