--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "experimentalDecorators": true,
     "outDir": "./dist/",
     "noImplicitAny": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "module": "es6",
     "target": "es5",
     "jsx": "react",
