fixed up README.md and .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,2 @@
 ENV=dev
-DATABASE='{"type":"sqlite", "database": "./database.sql", "synchronize": true}'
+DATABASE='{"type":"mysql", "host": "db", "database": "typeorm-example", "username": "typeorm", "password": "UYGI*YUh9687*^RT&%^RgytivbiguhibuhTF^f8gt68gt8g", "synchronize": true}'
