--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
   },
   "dependencies": {
     "@types/express": "^4.17.8",
+    "@types/react": "^16.9.55",
+    "@types/react-dom": "^16.9.9",
+    "@types/react-redux": "^7.1.9",
+    "@types/redux": "^3.6.0",
     "class-validator": "^0.12.2",
     "cote": "^1.0.0",
     "dotenv-webpack": "^4.0.0",
@@ -36,6 +40,11 @@
     "graphql": "^15.3.0",
     "merge-webpack-plugin": "^0.2.1",
     "mysql": "^2.18.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.0",
     "type-graphql": "^1.1.0",
