added scoped scss stylesheets

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,8 @@
       "~*": ["./src/*"]
     },
     "allowSyntheticDefaultImports": true
-  }
+  },
+  "includes": [
+    "./externals.d.ts"
+  ]
 }
