--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "concurrently": "^5.3.0",
     "copy-webpack-plugin": "^6.2.1",
     "create-file-webpack": "^1.0.2",
+    "css-loader": "^5.0.0",
     "glob": "^7.1.6",
     "glob-watcher": "^5.0.5",
     "html-loader": "^1.3.2",
     "nodemon": "^2.0.6",
+    "sass": "^1.28.0",
+    "sass-loader": "^10.0.5",
+    "style-loader": "^2.0.0",
     "ts-loader": "^8.0.7",
     "typescript": "^4.0.5",
     "webpack": "^5.2.0",
