--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@types/express": "^4.17.8",
+    "@types/js-cookie": "^2.2.6",
     "@types/node-fetch": "^2.5.7",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
@@ -44,6 +45,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "graphql": "^15.3.0",
+    "js-cookie": "^2.2.1",
     "merge-webpack-plugin": "^0.2.1",
     "mysql": "^2.18.1",
     "node-fetch": "^2.6.1",
